[package]
name = "ngux"
version = "0.4.0"
edition = "2018"
license = "MIT"
description = "Tree command, improved."
readme = "README.md"
exclude = ["/.github/*", "alias_demo.gif", "flake.nix", "flake.lock", "scripts/*", "fixtures/*"]
keywords = ["cli", "tool", "filesystem"]
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2"
clap = { version = "3.1.8", features = ["derive"] }
getopts = "0.2"
indexmap = "1.9.0"
lscolors = "0.10"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4.2"
termcolor = "1"
walkdir = "2"

[build-dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
clap_complete = "3.1"

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "tre"
path = "src/main.rs"
